test/corpus/simple.txt
==================
Simple Module
==================

module Foo.Bar exposing (..)
  let add(x, y) = x + y
end

---

(source_file
  (module_declaration
    (module_path
      (upper_identifier)
      (upper_identifier))
    (export_list
      (expose_all))
    (statement
      (function_declaration
        (lower_identifier)
        (parameter_list
          (lower_identifier)
          (lower_identifier))
        (binary_expression
          (lower_identifier)
          (lower_identifier))))))
